--- a/src/checkout/index.html
+++ b/src/checkout/index.html
@@ -8,11 +8,11 @@
 
     <title>Sleep Outside | Checkout</title>
 
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
   </head>
 
   <body>
-    <header class="divider">
+    <header class="divider" id="main-header">
       <div class="logo">
         <img src="images/noun_Tent_2517.svg" alt="tent image for logo" />
 
@@ -62,6 +62,7 @@
       </section>
     </main>
 
-    <footer>&copy;NOT a real business</footer>
+    <footer id="main-footer">&copy;NOT a real business</footer>
+    <script src="../js/checkout.js" type="module"></script>
   </body>
 </html>
